修改版权声明和界面样式

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -15,7 +15,7 @@ passwordNull=密码为空
 password.history.error=密码不能与近期密码相同
 error.user.password.leastLong=密码长度至少为{0}位
 error.user.password.leastCapitalAndSpecial=大写字母至少{0}位，特殊字符至少{1}位
-password.reset.mail=<!DOCTYPE html><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body><div style="text-align:left;position:relative;"><p>尊敬的用户您好， </p><p> 您正在进行找回密码操作。验证码为（有效时间30分钟）：</p><p class=n>{0}</p><p>该邮件为系统邮件，无需回复，如有疑问请联系系统管理员。</p><p> Copyright © The choerodon Author®. All rights reserved</p></div><locked/body></html>
+password.reset.mail=<!DOCTYPE html><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body><div style="text-align:left;position:relative;"><p>尊敬的用户您好， </p><p> 您正在进行找回密码操作。验证码为（有效时间30分钟）：</p><p class=n>{0}</p><p>该邮件为系统邮件，无需回复，如有疑问请联系系统管理员。</p><p> Copyright © The XforceCloud Author®. All rights reserved</p></div><locked/body></html>
 accountLocked=您的账号已被锁定，请{0}后登录或联系组织管理员解锁
 passwordExpire=密码已过期，请通过忘记密码找回密码！
 captchaNull=请输入验证码
